--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mui/utils": "^5.15.0",
     "is-mobile": "^4.0.0",
     "notistack": "^3.0.1",
+    "oauth4webapi": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
